[project]
name = "fabrics-sim"
version = "0.1.0"
description = ""
authors = [
    {name = "Karl Van Wyk",email = "kvanwyk@nvidia.com"}
]
packages = [
  { include = "fabrics_sim", from = "src" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.4.0)",
    "warp-lang (>=1.5.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "urdfpy (>=0.0.22,<0.0.23)",
    "numpy (>=1.23.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
